applications/crawler/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crawler-service
  namespace: cloudnative
spec:
  selector:
    app: crawler
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
