applications/crawler/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler-deployment
  labels:
    app: crawler
  namespace: cloudnative
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
  template:
    metadata:
      labels:
        app: crawler
    spec:
      containers:
      - name: crawler
        image: docker.io/siriuskoan/crawler
        imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: crawler-service
  namespace: cloudnative
spec:
  selector:
    app: crawler
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crawler-ingress
  namespace: cloudnative
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crawler-service
            port:
              number: 8080
